5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1735_3118.log
== TEST (2019-05-16 16:39:09) 
-- CODE:
n = int(input("Numero inteiro positivo: "))

cont = 0
soma = 0
div = n
exp = 0

while(div % 10 != 0):
	div = div / 10
	
	if(div / 10 == 0):
		
		if(div == n):
			exp = cont + 1	
		
		soma = soma + div**exp
		div = n - (div * 10**cont)
		cont = (-1)
		
	cont = cont + 1

if(soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    div = n - (div * 10**cont)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:21) 
-- CODE:
n = float(input("Numero inteiro positivo: "))

cont = 0.0
soma = 0.0
div = n
exp = 0.0

while(div % 10 != 0):
	div = div / 10
	
	if(div / 10 == 0):
		
		if(div == n):
			exp = cont + 1	
		
		soma = soma + div**exp
		div = n - (div * 10**cont)
		cont = (-1)
		
	cont = cont + 1

if(soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    div = n - (div * 10**cont)
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:36) 
-- CODE:
n = float(input("Numero inteiro positivo: "))

cont = 0.0
soma = 0.0
div = n
exp = 0.0

while(div % 10 != 0.0)
	div = div / 10
	
	if(div / 10 == 0.0):
		
		if(div == n):
			exp = cont + 1	
		
		soma = soma + div**exp
		div = n - (div * 10**cont)
		cont = (-1)
		
	cont = cont + 1

if(soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
File "XXXX", line 8
    while(div % 10 != 0.0)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:41:47) 
-- CODE:
n = float(input("Numero inteiro positivo: "))

cont = 0.0
soma = 0.0
div = n
exp = 0.0

while(div % 10 != 0)
	div = div / 10
	
	if(div / 10 == 0):
		
		if(div == n):
			exp = cont + 1	
		
		soma = soma + div**exp
		div = n - (div * 10**cont)
		cont = (-1)
		
	cont = cont + 1

if(soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
File "XXXX", line 8
    while(div % 10 != 0)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:09) 
-- CODE:
n = float(input("Numero inteiro positivo: "))

cont = 0.0
soma = 0.0
div = n
exp = 0.0

while(div % 10 != 0.0):
	div = div / 10
	
	if(div / 10 == 0):
		
		if(div == n):
			exp = cont + 1	
		
		soma = soma + div**exp
		div = n - (div * 10**cont)
		cont = (-1)
		
	cont = cont + 1

if(soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    div = n - (div * 10**cont)
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:42:18) 
-- CODE:
n = float(input("Numero inteiro positivo: "))

cont = 0.0
soma = 0.0
div = n
exp = 0.0

while(div % 10 != 0.0):
	div = div / 10
	
	if(div / 10 == 0.0):
		
		if(div == n):
			exp = cont + 1	
		
		soma = soma + div**exp
		div = n - (div * 10**cont)
		cont = (-1)
		
	cont = cont + 1

if(soma == n):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    div = n - (div * 10**cont)
OverflowError: (34, 'Numerical result out of range')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:24:45) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
soma = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	soma = d1**exp + d2**exp + d3**exp
	
	if(result == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
	exp = len(str(n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if(result == n):
NameError: name 'result' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:25:02) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
soma = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	soma = d1**exp + d2**exp + d3**exp
	
	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
	exp = len(str(n))
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 13:25:16) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
soma = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	soma = d1**exp + d2**exp + d3**exp
	
	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
	exp = len(str(n))
-- EXECUTION TIME:
0.163432
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 13:25:51) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
soma = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	soma = d1**exp + d2**exp + d3**exp
	
	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
	exp = len(str(n))
-- EXECUTION TIME:
0.182983
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:25:53) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
soma = 0

while (n > 0):
	d1 = n//100
	d2 = n//10 % 10
	d3 = n % 10
	soma = d1**exp + d2**exp + d3**exp
	
	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
	exp = len(str(n))
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:53:10) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
cont = 1
n2 = n
soma = 0

while(n > 0):
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("YES")
	else:
		print("NON")
	n = int(input("Numero: "))
	exp = len(str(n))
-- OUTPUT:
YES
NON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:53:44) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
cont = 1
n2 = n
soma = 0

while(n > 0):
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("YES")
	else:
		print("NON")
	n = int(input("Numero: "))
	exp = len(str(n))
	cont = 1
	n2 = n
-- OUTPUT:
YES
NON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:56:14) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
cont = 1
n2 = n
soma = 0

while(n > 0):
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("YES")
	else:
		print("NON")
		
	n = int(input("Numero: "))
	exp = len(str(n))
	cont = 1
	n2 = n
-- OUTPUT:
YES
NON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:57:06) 
-- CODE:
n = int(input("Numero: "))
exp = len(str(n))
cont = 1
n2 = n
soma = 0

while(n > 0):
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("YES")
	else:
		print("NON")
		
	n = int(input("Numero: "))
	exp = len(str(n))
	cont = 1
	n2 = n
	print(n,exp,cont,n2)
-- OUTPUT:
YES
153 3 1 153
NON
-1 2 1 -1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:58:39) 
-- CODE:
n = int(input("Numero: "))
soma = 0

while(n > 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("YES")
	else:
		print("NON")
		
	n = int(input("Numero: "))
	print(n,exp,cont,n2)
-- OUTPUT:
YES
153 1 2 0
NON
-1 3 4 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 13:59:01) 
-- CODE:
n = int(input("Numero: "))

while(n > 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("YES")
	else:
		print("NON")
		
	n = int(input("Numero: "))
-- OUTPUT:
YES
YES
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 13:59:53) 
-- CODE:
n = int(input("Numero: "))

while(n > 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
-- EXECUTION TIME:
0.127959
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:
Numero:
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
Numero: NAO ARMSTRONG
Numero: NAO ARMSTRONG
Numero: NAO ARMSTRONG
Numero: NAO ARMSTRONG
Numero:
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
Numero: ARMSTRONG
Numero: NAO ARMSTRONG
Numero: ARMSTRONG
Numero: NAO ARMSTRONG
Numero:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:00:06) 
-- CODE:
n = int(input("Numero: "))

while(n > 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:03:18) 
-- CODE:
n = int(input("Numero: "))

while(n > 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	print(n,exp,cont,n2,soma)
	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
-- OUTPUT:
1 1 2 0 1
ARMSTRONG
153 3 4 0 153
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 14:03:40) 
-- CODE:
n = int(input("Numero: "))

while(n > 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont < exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
-- EXECUTION TIME:
0.151904
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 14:04:01) 
-- CODE:
n = int(input("Numero: "))

while(n >= 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
-- OUTPUT:
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 14:04:11) 
-- CODE:
n = int(input("Numero: "))

while(n >= 0):
	exp = len(str(n))
	cont = 1
	n2 = n
	soma = 0
	
	while(cont <= exp):
		e = 10**(exp-cont)
		d1 = n2 // e
		n2 = n2 - (e*d1)
		soma = soma + d1**exp
		cont = cont + 1

	if(soma == n):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	n = int(input("Numero: "))
-- EXECUTION TIME:
0.147993
-- TEST CASE 1:
---- input:
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
